--- a/tp/tp1/Makefile
+++ b/tp/tp1/Makefile
@@ -1,7 +1,7 @@
 treap: treap.o main.o
-	gcc treap.o main.o -o treap
+	gcc -Wall treap.o main.o -o treap
 main.o: main.c treap.h
-	gcc -g -c main.c
+	gcc -Wall -g3 -c main.c
 treap.o: treap.h treap.c
-	gcc -g -c treap.c
+	gcc -Wall -g3 -c treap.c
 
