--- a/tp/tp1/tests/Makefile
+++ b/tp/tp1/tests/Makefile
@@ -1,7 +1,7 @@
 # Making test files #
-test: ../treap.o treap.test.o
-	gcc ../treap.o treap.test.o -o test
-treap.test.o: treap.test.c ../treap.h
-	gcc -g -c treap.test.c
+test: ../treap.o test.o
+	gcc ../treap.o test.o -o test
+test.o: test.c ../treap.h
+	gcc -g3 -c test.c
 ../treap.o: ../treap.h ../treap.c
-	gcc -g -c ../treap.c
+	gcc -g3 -c ../treap.c
